fixed footer alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1,102 +1,111 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,700');
-@import url('https://fonts.googleapis.com/css?family=Merriweather:700,900');
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700");
+@import url("https://fonts.googleapis.com/css?family=Merriweather:700,900");
 
-body{
-  font: 15px/1.5 Arial, ;
-  font-family: 'Roboto Slab', serif;
-  padding:0;
-  margin:0;
-  background-color:#f4f4f4;
+html,
+body {
+  font: 15px/1.5 Arial;
+  font-family: "Roboto Slab", serif;
+  padding: 0;
+  margin: 0;
+  background-color: #f4f4f4;
+  overflow: auto;
+  min-height: 100%;
+}
+
+body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Global */
-.container{
-  width:90%;
-  margin:auto;
-  overflow:hidden;
+.container {
+  width: 90%;
+  margin: auto;
+  overflow: hidden;
 }
 
-ul{
-  margin:0;
-  padding:0;
+ul {
+  margin: 0;
+  padding: 0;
 }
 
-.button_1{
-  height:38px;
-  background:#fb2e01;
-  border:0;
+.button_1 {
+  height: 38px;
+  background: #fb2e01;
+  border: 0;
   padding-left: 20px;
-  padding-right:20px;
-  color:#f4f4f4;
+  padding-right: 20px;
+  color: #f4f4f4;
 }
 
-.dark{
-  padding:15px;
-  background:#2e2e2e;;
-  color:#f4f4f4;
-  margin-top:10px;
-  margin-bottom:10px;
+.dark {
+  padding: 15px;
+  background: #2e2e2e;
+  color: #f4f4f4;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 /* Header **/
-header{
-  font-family: 'Merriweather', serif;
+header {
+  font-family: "Merriweather", serif;
   background: #f4f4f4;
-  color:#2e2e2e;
-  padding:10px 0px;
-  min-height:50px;
-  border-bottom:#fb2e01 3px solid;
+  color: #2e2e2e;
+  padding: 10px 0px;
+  min-height: fit-content;
+  border-bottom: #fb2e01 3px solid;
 }
 
-header a{
-  color:#2e2e2e;
+header a {
+  color: #2e2e2e;
   font-weight: bold;
-  text-decoration:none;
+  text-decoration: none;
   text-transform: uppercase;
-  font-size:16px;
+  font-size: 16px;
 }
 
-header li{
-  display:inline;
+header li {
+  display: inline;
   padding: 0 20px 0 20px;
 }
 
-header #branding{
+header #branding {
   display: inline-block;
   width: 450px;
 }
 
-header #logo{
+header #logo {
   float: left;
   padding-right: 20px;
   width: 75px;
 }
 
-header #branding h1{
-  margin:0;
+header #branding h1 {
+  margin: 0;
 }
 
-header #branding h4{
+header #branding h4 {
   margin: 0;
   display: inline-block;
   margin-left: 75px;
 }
 
-header nav{
-  float:right;
-  margin-top:25px;
+header nav {
+  float: right;
+  margin-top: 25px;
   overflow: hidden;
-
 }
 
-header .highlight,   header .current a{
-  color:#fb2e01;
-  font-weight:bold;
+header .highlight,
+header .current a {
+  color: #fb2e01;
+  font-weight: bold;
 }
 
-header a:hover{
-  color:#fb2e01;
-  font-weight:bold;
+header a:hover {
+  color: #fb2e01;
+  font-weight: bold;
 }
 
 .topnav {
@@ -129,18 +138,22 @@ header a:hover{
   display: none;
 }
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child)  {display: none;}
+  .topnav a:not(:first-child) {
+    display: none;
+  }
   .topnav a.icon {
     float: right;
     display: block;
   }
-  .topnav a{
+  .topnav a {
     display: none;
   }
 }
 
 @media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {
+    position: relative;
+  }
   .topnav.responsive a.icon {
     position: absolute;
     right: 0;
@@ -150,23 +163,22 @@ header a:hover{
     float: none;
     display: block;
     text-align: left;
-
   }
-  .topnav{
-    background-color: #ddd
+  .topnav {
+    background-color: #ddd;
   }
 }
 
 /* Showcase */
-#showcase{
-  height:450px;
+#showcase {
+  height: 450px;
   overflow: hidden;
   position: relative;
-  text-align:center;
-  background-color:#2e2e2e;
+  text-align: center;
+  background-color: #2e2e2e;
 }
 
-#showcase video{
+#showcase video {
   max-width: 100%;
   height: auto;
   position: absolute;
@@ -176,88 +188,89 @@ header a:hover{
 }
 
 /* Newsletter */
-#newsletter{
-  padding:15px;
-  color:#ffffff;
-  background:#2e2e2e;
+#newsletter {
+  padding: 15px;
+  color: #ffffff;
+  background: #2e2e2e;
 }
 
-#newsletter h1{
-  float:left;
+#newsletter h1 {
+  float: left;
 }
 
 #newsletter form {
-  float:right;
-  margin-top:15px;
+  float: right;
+  margin-top: 15px;
 }
 
-#newsletter input[type="email"]{
-  padding:4px;
-  height:25px;
-  width:250px;
+#newsletter input[type="email"] {
+  padding: 4px;
+  height: 25px;
+  width: 250px;
 }
 
 /* Boxes */
-#boxes{
-  margin-top:1%;
+#boxes {
+  margin-top: 1%;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
 }
 
-#boxes .box{
-  float:left;
+#boxes .box {
+  float: left;
   text-align: center;
-  width:30%;
-  padding:10px;
+  width: 30%;
+  padding: 10px;
 }
 
-#boxes a{
-  text-decoration:none;
+#boxes a {
+  text-decoration: none;
   color: #000000;
 }
-#boxes .box img{
-  width:90px;
+#boxes .box img {
+  width: 90px;
 }
 
 /* Sidebar */
-aside#sidebar{
-  float:right;
-  width:30%;
-  margin-top:10px;
+aside#sidebar {
+  float: right;
+  width: 30%;
+  margin-top: 10px;
 }
 
-aside#sidebar .quote input, aside#sidebar .quote textarea{
-  width:90%;
-  padding:5px;
+aside#sidebar .quote input,
+aside#sidebar .quote textarea {
+  width: 90%;
+  padding: 5px;
 }
 
 /* Main-col */
-article#main-col{
-  float:left;
-  width:65%;
+article#main-col {
+  float: left;
+  width: 65%;
 }
 
 /* Products */
-ul#products li{
+ul#products li {
   list-style: none;
-  padding:20px;
+  padding: 20px;
   border: #cccccc solid 1px;
-  margin-bottom:5px;
-  background:#e6e6e6;
+  margin-bottom: 5px;
+  background: #e6e6e6;
 }
 
-footer{
-  padding:20px;
-  margin-top:20px;
-  color:#ffffff;
-  background-color:#2e2e2e;;
+footer {
+  padding: 20px;
+  margin-top: 20px;
+  color: #ffffff;
+  background-color: #2e2e2e;
   text-align: center;
-  border-top:#fb2e01 5px solid;
+  border-top: #fb2e01 5px solid;
 }
 
 /* Media Queries */
-@media(max-width: 600px){
+@media (max-width: 600px) {
   header #branding,
   header nav,
   header nav li,
@@ -267,33 +280,36 @@ footer{
   #boxes .box,
   article#main-col,
   article#storeMain-col,
-  aside#sidebar{
-    float:none;
-    text-align:center;
-    width:100%;
+  aside#sidebar {
+    float: none;
+    text-align: center;
+    width: 100%;
   }
 
-  header{
-    padding-bottom:20px;
+  header {
+    padding-bottom: 20px;
   }
 
-  #showcase{
+  #showcase {
     height: 200px;
   }
 
-  #newsletter button, .quote button{
-    display:block;
-    width:100%;
+  #newsletter button,
+  .quote button {
+    display: block;
+    width: 100%;
   }
 
-  #newsletter form input[type="email"], .quote input, .quote textarea{
-    width:100%;
-    margin-bottom:5px;
+  #newsletter form input[type="email"],
+  .quote input,
+  .quote textarea {
+    width: 100%;
+    margin-bottom: 5px;
   }
 }
 
-@media(max-width: 400px){
-  header #branding{
+@media (max-width: 400px) {
+  header #branding {
     font-size: 10px;
   }
 }
