--- a/css/support.css
+++ b/css/support.css
@@ -1,114 +1,116 @@
-#main{
+#main {
   padding-bottom: 15px;
 }
 
 /* overlay implimentation*/
 #overlay {
-position: fixed;
-display: none;
-width: 50%;
-height: 100%;
-top: 0;
-left: 0;
-right: 0;
-bottom: 0;
-margin-top: 0;
-margin-left: 25%;
-background-color: rgba(30, 49, 66, 0.95);
-z-index: 10;
-cursor: pointer;
+  position: fixed;
+  display: none;
+  width: 50%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin-top: 0;
+  margin-left: 25%;
+  background-color: rgba(30, 49, 66, 0.95);
+  z-index: 10;
+  cursor: pointer;
 }
 
-#text{
-position: relative;
-top: 50%;
-left: 50%;
-color: white;
-transform: translate(-50%,-50%);
--ms-transform: translate(-50%,-50%);
-padding-bottom: 50px;
-overflow: scroll;
-height: 100%;
+#text {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  color: white;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  padding-bottom: 50px;
+  overflow: scroll;
+  height: 100%;
 }
 
 #overlay1 {
-position: fixed;
-display: none;
-width: 50%;
-height: 100%;
-top: 0;
-left: 0;
-right: 0;
-bottom: 0;
-margin-left: 25%;
-background-color: rgba(30, 49, 66, 0.95);
-z-index: 10;
-cursor: pointer;
+  position: fixed;
+  display: none;
+  width: 50%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin-left: 25%;
+  background-color: rgba(30, 49, 66, 0.95);
+  z-index: 10;
+  cursor: pointer;
 }
 
 #text1 {
-position: relative;
-top: 52%;
-left: 52%;
-color: white;
-transform: translate(-50%,-50%);
--ms-transform: translate(-50%,-50%);
-width: 95%;
-padding-bottom: 30px;
-padding-right: 20px;
-overflow: scroll;
-height: 100%;
+  position: relative;
+  top: 52%;
+  left: 52%;
+  color: white;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  width: 95%;
+  padding-bottom: 30px;
+  padding-right: 20px;
+  overflow: scroll;
+  height: 100%;
 }
 
 /* Ticket implimentation
   Style inputs */
-input[type=text], select, textarea {
-width: 100%;
-padding: 12px;
-border: 1px solid #ccc;
-margin-top: 6px;
-margin-bottom: 16px;
-resize: vertical;
+input[type="text"],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
 }
 
-input[type=submit] {
-background-color: #4CAF50;
-color: white;
-padding: 12px 20px;
-border: none;
-cursor: pointer;
+input[type="submit"] {
+  background-color: #4caf50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
 }
 
-input[type=submit]:hover {
-background-color: #45a049;
+input[type="submit"]:hover {
+  background-color: #45a049;
 }
 
 /* Style the container/contact section */
 .ticketContainer {
-width: 100%;
-border-radius: 5px;
-padding: 10px;
+  width: 100%;
+  border-radius: 5px;
+  padding: 10px;
 }
 
 /* Create two columns that float next to eachother */
 .column {
-float: left;
-width: 50%;
-margin-top: 6px;
-padding: 20px;
+  float: left;
+  width: 50%;
+  margin-top: 6px;
+  padding: 20px;
 }
 .col {
-float: left;
-width: 95%;
-margin-top: 0px;
-margin-bottom: 50%;
+  float: left;
+  width: 95%;
+  margin-top: 0px;
+  margin-bottom: 50%;
 }
 
 /* Clear floats after the columns */
 .row:after {
-content: "";
-display: table;
-clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
@@ -120,9 +122,9 @@ clear: both;
 }
 } */
 
-@media(max-width: 600px){
+@media (max-width: 600px) {
   #overlay,
-  #overlay1{
+  #overlay1 {
     width: 100%;
     margin: 0px;
     height: 100%;
